# dataset_manager

./: README.md  main.py  models.txt  pyproject.toml  requirements.txt  train_template.py  train_template.py.jinja  需求描述.md
.qoder/rules/: enviroment.md
src/: logging_config.py
src/auto_annotation/: auto_annotation_panel.py  log_analysis_panel.py  model_config_panel.py
src/auto_training/: __init__.py  async_uploader.py  auto_training_panel.py  auto_training_panel.py.truncated  task_edit_dialog.py  training_log_viewer.py  training_task.py
src/data_source/: data_source_panel.py
src/dataset_split/: dataset_split_panel.py
src/file_manager/: __init__.py  events.py  file_manager_panel.py  panel.py  recycle_bin.py  ui.py
src/persist/: yolo_utils.py
src/preview/: __init__.py  algorithm_test_panel.py  image_details.py  image_preview_panel.py  live_preview_panel.py  panel.py  picture_annotation.py  player.py  preview_panel.py  strategies.py  text_preview_panel.py  video_details.py  video_preview_panel.py  yolo_utils.py
src/preview/img/: image_preview_panel.py  yolo_utils.py
src/preview/video/: __init__.py  video_preview_panel.py
src/remote_server/: file_transfer_dialog.py  remote_file_browser_panel.py  server_config.py  server_config_panel.py  ssh_client.py
src/ui/: details_panel.py  main_window.py
