[project]
name = "dataset-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "labelimg>=1.8.6",
    "openai>=2.6.0",
    "opencv-python>=4.12.0.88",
    "PyQt5>=5.15.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"