[project]
name = "dataset-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.50.0",
    "opencv-python>=4.12.0.88",
    "PyQt5>=5.15.0",
    "ultralytics>=8.3.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
