[project]
name = "dataset-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.50.0",
    "opencv-python>=4.12.0.88",
    "PyQt5>=5.15.0,<5.15.12",
    "PyQt5-Qt5>=5.15.2,<5.15.10",  # 限制到更早的版本以确保兼容性
    "ultralytics>=8.3.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# 添加环境配置以解决不同平台的依赖兼容性问题
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]